--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.jakewharton:butterknife:8.2.1'
     compile 'cn.bmob.android:bmob-sdk:3.5.0'
-
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.17'
 }
