--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
@@ -15,7 +16,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-
+        mavenCentral()
         maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
     }
 }
