--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    useLibrary 'org.apache.http.legacy'
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
@@ -29,4 +30,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.1'
     compile 'cn.bmob.android:bmob-sdk:3.5.0'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.17'
+
+    compile project(path: ':volley')
 }
