--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.1'
     compile 'cn.bmob.android:bmob-sdk:3.5.0'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.17'
-
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile project(path: ':volley')
 }
