--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.17'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile project(path: ':volley')
+    compile 'com.android.support:cardview-v7:24.0.0'
 }
