--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ico"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.MainActivity"
-            android:screenOrientation="portrait" >
+        <activity
+            android:name=".Activity.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,9 +18,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activity.CommentActivity">
+        </activity>
+        <activity android:name=".Activity.BookDetailActivity">
 
         </activity>
-
     </application>
     <!--允许联网 -->
     <uses-permission android:name="android.permission.INTERNET" />
