--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@drawable/ico"
         android:label="@string/app_name"
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme">
         <activity
             android:name=".Activity.MainActivity"
@@ -17,9 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.CommentActivity">
+        <activity android:name=".Activity.CommentActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".Activity.BookDetailActivity">
+        <activity android:name=".Activity.BookDetailActivity"
+            android:screenOrientation="portrait">
 
         </activity>
     </application>
