--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
         android:icon="@drawable/ico"
         android:label="@string/app_name"
         android:supportsRtl="true"
-
         android:theme="@style/AppTheme">
         <activity
             android:name=".Activity.MainActivity"
@@ -18,13 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.CommentActivity"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".Activity.BookDetailActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
+        <activity
+            android:name=".Activity.CommentActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Activity.BookDetailActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".Activity.PermissionsActivity"></activity>
     </application>
     <!--允许联网 -->
     <uses-permission android:name="android.permission.INTERNET" />
