--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -34,4 +35,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile project(path: ':volley')
     compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
