--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
 
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
 }
