--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile 'cn.bmob.android:bmob-sdk:3.5.0'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.17'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
+    /*compile 'com.takisoft.fix:preference-v7:24.2.0.0'*/
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
